# cloud-speed

./: .dockerignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  build.rs  rustfmt.toml
.github/workflows/: docker-publish.yml  release.yml
.kiro/hooks/: jj-commit-changes.kiro.hook
.kiro/specs/cloudflare-speedtest-parity/: design.md  requirements.md  tasks.md
.kiro/specs/tui-progress-display/: design.md  requirements.md  tasks.md
.kiro/steering/: cli-design.md  measurement-accuracy.md  product.md  project-architecture.md  rust-conventions.md  structure.md  tech.md  testing-strategy.md
docker/opensearch/: docker-compose.yml  index-template.json  setup-template.sh
docker/runner/: Dockerfile  Dockerfile.prebuilt  crontab  run-speedtest.sh
proptest-regressions/: measurements.txt  stats.txt
src/: errors.rs  main.rs  measurements.rs  results.rs  retry.rs  scoring.rs  stats.rs
src/cloudflare/: client.rs  mod.rs
src/cloudflare/requests/: download.rs  locations.rs  meta.rs  mod.rs  trace.rs  upload.rs
src/cloudflare/tests/: connection.rs  download.rs  engine.rs  mod.rs  packet_loss.rs  upload.rs
src/tui/: controller.rs  display_mode.rs  mod.rs  progress.rs  renderer.rs  state.rs
