[package]
name = "cloud-speed"
version = "0.6.0"
edition = "2021"
authors = ["Hunter Skrasek"]
description = """
cloud-speed is a tool for testing your networks speed and consistency.
"""
documentation = "https://github.com/hskrasek/cloud-speed"
homepage = "https://github.com/hskrasek/cloud-speed"
repository = "https://github.com/hskrasek/cloud-speed"
license = "AGPL-3"
readme = "README.md"
keywords = ["cloud-speed", "cloudflare"]
categories = ["command-line-utilities"]
rust-version = "1.85.0"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
clap-verbosity-flag = "3.0.2"
colored = "3.0.0"
env_logger = "0.11.6"
log = "0.4.26"
reqwest = { version = "0.12.12", features = ["json"] }
rustls = { version = "0.23.23", default-features = false, features = ["tls12", "logging", "ring"] }
rustls-connector = { version = "0.21.4", default-features = false, features = ["rustls--ring", "native-certs", "webpki-roots-certs"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
serde_plain = "1.0.2"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
ttfb = "1.14.0"
url = "2.5.4"
http = "1.1.0"
futures = "0.3.31"
ratatui = "0.29"
crossterm = "0.28"

[dependencies.clap]
version = "4.5.31"
default-features = false
features = ["derive", "help", "suggestions", "usage"]

[dependencies.hickory-resolver]
version = "0.24.4"
default-features = false
features = ["dns-over-rustls", "system-config"]

[dev-dependencies]
proptest = "1.5.0"

[build-dependencies]
colored = "3.0.0"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_plain = "1.0.2"

[build-dependencies.clap]
version = "4.5.21"
default-features = false
features = ["derive", "suggestions", "std"]

[[bin]]
bench = false
path = "src/main.rs"
name = "cloud-speed"

[profile.dev]
opt-level = 0  # Keep it 0 for faster build times during development

[profile.release]
debug = 1

[profile.release-lto]
inherits = "release"
opt-level = 3
debug = "none"
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1
