[package]
name = "cloud-speed"
version = "0.7.0"
edition = "2021"
authors = ["Hunter Skrasek"]
description = """
cloud-speed is a tool for testing your networks speed and consistency.
"""
documentation = "https://github.com/hskrasek/cloud-speed"
homepage = "https://github.com/hskrasek/cloud-speed"
repository = "https://github.com/hskrasek/cloud-speed"
license = "AGPL-3"
readme = "README.md"
keywords = ["cloud-speed", "cloudflare"]
categories = ["command-line-utilities"]
rust-version = "1.85.0"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
clap-verbosity-flag = "3.0.2"
colored = "3.0.0"
env_logger = "0.11.6"
log = "0.4.26"
reqwest = { version = "0.13.1", default-features = false, features = ["json", "native-tls"] }
rustls-connector = { version = "0.22.0", default-features = false, features = ["rustls--ring", "native-certs", "webpki-roots-certs"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
serde_plain = "1.0.2"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros", "signal"] }
url = "2.5.4"
http = "1.1.0"
ratatui = "0.30.0"
crossterm = "0.29.0"

[dependencies.clap]
version = "4.5.31"
default-features = false
features = ["derive", "help", "suggestions", "usage"]

[dependencies.hickory-resolver]
version = "0.25.2"
default-features = false
features = ["system-config", "tokio"]

[dev-dependencies]
proptest = "1.5.0"

[[bin]]
bench = false
path = "src/main.rs"
name = "cloud-speed"

[profile.dev]
opt-level = 0  # Keep it 0 for faster build times during development

[profile.release]
debug = 1

[profile.release-lto]
inherits = "release"
opt-level = 3
debug = "none"
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1
